# SecSignal

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: overview.md
dbt/models/marts/: dim_filing_images.sql  fct_chart_data.sql  fct_financials.sql  fct_risk_factors.sql  marts_schema.yml
dbt/models/staging/: src_raw.yml  stg_chart_extracts.sql  stg_companies.sql  stg_filing_images.sql  stg_filings.sql  stg_schema.yml  stg_sections.sql
scripts/: extract_financials.py  extract_remaining.py  reparse_filings.py  run_evaluation.py  run_pipeline.py  test_agents.py  test_image_pipeline.py
secsignal/agents/: __init__.py  anomaly_agent.py  comparison_agent.py  connection.py  general_agent.py  graph.py  guardrails.py  peer_group_agent.py  sentiment_agent.py  state.py  supervisor.py  synthesizer.py  trend_agent.py  valuation_agent.py  web_search_agent.py
secsignal/agents/tools/: __init__.py  anomaly_scorer.py  chart_generator.py  semantic_tool.py  sql_tool.py  visual_tool.py  web_search_tool.py
secsignal/airflow/dags/: ingest_filings.py
secsignal/api/: __init__.py  main.py
secsignal/api/middleware/: tracing.py
secsignal/api/routers/: query.py
secsignal/embeddings/: cortex_embed.py  image_embedder.py  text_embedder.py
secsignal/evaluation/: __init__.py  runner.py  scorers.py  test_cases.py
secsignal/frontend/: __init__.py  app.py  next.config.ts  package-lock.json  package.json
secsignal/frontend/app/: globals.css  layout.tsx  page.tsx
secsignal/frontend/components/: agent-trajectory.tsx  analysis-result.tsx  (+10 more)
secsignal/ingestion/: edgar_client.py  filing_parser.py  gcs_uploader.py
secsignal/processing/: chart_analyzer.py  description_gen.py  document_parser.py  image_extractor.py
sql/: 00_setup_database.sql  01_create_stages.sql  02_raw_tables.sql  03_parsed_documents.sql  04_embedding_tables.sql  05_cortex_search.sql  06_extracted_financials.sql
(+3 files in other folders)
